Add LSYAML Loggers, and fix trailing end lines